initial frontend commit

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Needs a title</title>
+  <title>Pollr</title>
   <link href="./style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
