--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Pollr</title>
-  <link href="./style.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-  <div id="root"></div>
-  <script src='/dist/bundle.js'></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Pollr</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:400,600,600i,800"
+      rel="stylesheet"
+    />
+    <link href="./style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script src="/dist/bundle.js"></script>
+  </body>
 </html>
